--- a/index.html
+++ b/index.html
@@ -1,14 +1,61 @@
-<!DOCTYPE <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Paul's Portfolio</title>
+    <title>My Portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <script src="main.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Candal|Days+One" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="Assets/style.css">
 </head>
 <body>
-    
+            <nav id="navigation" class="navbar navbar-expand-lg navbar-light">
+                <a id="connerheading" class="navbar-brand" href="#"><h1>Paul Aguilar</h1></a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                </button>
+            
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="index.html">About Me <span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="portfolio.html">Portfolio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="contact.html">Contact Me</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+  <div id="aboutme">
+    <div class="row">
+        <div class="col-lg-8 offset-lg-2" id=aboutmebg>
+            <h1 id="aboutmetitle">About Me</h1>
+            <img src="https://github.com/paultex11/Updated-Portfolio/blob/master/assets/images/31960234_1428562927288897_6828252613360746496_n.jpg" class="img-fluid" alt="Responsive image">
+            <p>
+                I’ve always loved challenges and puzzles. Something about working through a problem in the most efficient manner always scratches some itch I’ve had since childhood. That’s one of the things that has led me to pursue a career as a full stack web developer. I’d been coding for about 2 years when I decided to pursue SMU’s Full Stack Web Development Certification.
+                <br><br>
+                Previously, I had worked my way through the standard business major graduation careers (banking and insurance). I met some great people along the way but I always felt like something was missing. I enjoyed every day, yet there was always that nagging feeling I was missing something. It was creativity and challenge! I wanted to feel proud of what I had made and work with a team who felt the same way. 
+                <br><br>
+                Since then, I’ve pursued this career with a passion I didn’t know that I had in me. I’m still learning, but that’s true of all of us, isn’t it? I’m certain that I’ll continue to improve day after day and that I’ll enjoy every minute of it. I am a Web Developer. 
+                <br><br>
+                Feel free to check out my <a href="www.linkedin.com/in/connerrhodes">LinkedIn</a>, <a href = "https://github.com/Crhodes92">Github</a>, and <a href="Assets/Images/CR_Resume.pdf">Resume</a>.
+            </p>
+        </div>
+    </div>
+<div class="footercontainer">
+    <div class="row" id="footer">
+        <div class="col-lg-12">
+            <p>Copyright</p>
+        </div>
+    </div>
+  </div>
+</div>  
 </body>
 </html>
