--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
 </head>
 <body>
             <nav id="navigation" class="navbar navbar-expand-lg navbar-light">
-                <a id="connerheading" class="navbar-brand" href="#"><h1>Conner Rhodes</h1></a>
+                <a id="connerheading" class="navbar-brand" href="#"><h1>Paul Aguilar</h1></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                 </button>
@@ -36,14 +36,14 @@
             <div id="aboutme">
                 <div class="row">
                     <div class="col-lg-8 offset-lg-2" id=aboutmebg>
-                        <h1 id="aboutmetitle">Contact Me</h1>
+                        <h1 id="aboutmetitle">You Can Reach Me Here:</h1>
                         <p>
                             <br>
-                            Email: Crhodes2146@gmail.com
+                            Email: paultex11@gmail.com
                             <br><br>
-                            Phone Number: (214) 686-8988
+                            Phone Number: (469)478-8424
                             <br><br>
-                            Located in Dallas, Texas
+                            Dallas, Texas
                         </p>
                     </div>
                 </div>
@@ -71,7 +71,7 @@
             <div class="footercontainer">
                     <div class="row" id="footer">
                         <div class="col-lg-12">
-                            <p>Copyright</p>
+                            <p>Copyright | Paul Aguilar</p>
                         </div>
                     </div>
                   </div>
