--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
 <body>
     <nav id="navigation" class="navbar navbar-expand-lg navbar-light ">
         <a id="connerheading" class="navbar-brand" href="#">
-            <h1>Conner Rhodes</h1>
+            <h1>Paul Aguilar</h1>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
             aria-expanded="false" aria-label="Toggle navigation">
