--- a/portfolio.html
+++ b/portfolio.html
@@ -50,27 +50,28 @@
                 <h1 id="aboutmetitle">Portfolio</h1>
                 <div class="card-group">
                     <div class="card">
-                        <img class="card-img-top" src="Assets/Images/pokedexSnap.PNG" alt="Card image cap">
-                        <a href="https://crhodes92.github.io/PokedexRepo/">
+                        <img class="card-img-top" src="assets/images/AR-Trivia.PNG" alt="Card image cap">
+                        <a href="https://paultex11.github.io/TriviaGame/">
                             <div class="card-body">
-                                <h5 class="card-title">Pokedex</h5>
+                                <h5 class="card-title">AR-15 Trivia</h5>
                             </div>
                         </a>
                     </div>
                     <div class="card">
-                        <img class="card-img-top" src="Assets/Images/retrotrivia.PNG" alt="Card image cap">
-                        <a href="https://crhodes92.github.io/TriviaGame/">
+                        <img class="card-img-top" src="assets/images/Gif-Tastic.PNG" alt="Card image cap">
+                        <a href="https://paultex11.github.io/GifTastic-Homework/">
                             <div class="card-body">
-                                <h5 class="card-title">Retro Game Trivia</h5>
+                                <h5 class="card-title">GifTastic Website</h5>
                             </div>
                         </a>
                     </div>
                     <div class="card">
-                        <img class="card-img-top" src="Assets/Images/Giphygifpage.PNG" alt="Card image cap">
-                        <a href="https://crhodes92.github.io/Giphy-API/">
+                        <img class="card-img-top" src="assets/images/Train-Sch.PNG" alt="Card image cap">
+                        <a href="https://paultex11.github.io/Train-Scheduler/">
                             <div class="card-body">
-                                <h5 class="card-title">Giphy Gif Gallery</h5>
+                                <h5 class="card-title">Train-Scheduler</h5>
                             </div>
+                            <!--
                         </a>
                     </div>
                 </div>
@@ -103,10 +104,13 @@
             </div>
         </div>
     </div>
+        -->
+        <br>
+
     <div class="footercontainer">
         <div class="row" id="footer">
             <div class="col-lg-12">
-                <p>Copyright</p>
+                <p>Copyright | Paul Aguilar</p>
             </div>
         </div>
     </div>
