--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" href="Assets/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
             <nav id="navigation" class="navbar navbar-expand-lg navbar-light">
@@ -47,27 +47,7 @@
                         </p>
                     </div>
                 </div>
-            <!-- <div id=contactinfo>
-                    <div class="row">
-                        <div class="col-lg-8 offset-lg-2" id=contactbg>
-                            <h1 id="aboutmetitle">Contact Info</h1>
-                            <form>
-                                    <div class="form-group">
-                                      <label for="exampleInputEmail1">Name</label>
-                                      <input type="name" class="form-control" id="exampleInputName1" aria-describedby="emailHelp" placeholder="Enter Name">
-                                    </div>
-                                    <div class="form-group">
-                                      <label for="exampleInputPassword1">Email</label>
-                                      <input type="Email" class="form-control" id="exampleInputEmail1" placeholder="Enter Email">
-                                    </div>
-                                    <div>
-                                    <label for="exampleInputEmail1">Message</label>
-                                      <input type="name" class="form-control" id="exampleInputmessage" aria-describedby="emailHelp" placeholder="Enter Message">
-                                    </div>
-                                    <button type="submit" class="btn" id="submitbutton">Submit</button>
-                                  </form>
-                        </div>
-                    </div> -->
+          
             <div class="footercontainer">
                     <div class="row" id="footer">
                         <div class="col-lg-12">
