--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
 </head>
 <body>
             <nav id="navigation" class="navbar navbar-expand-lg navbar-light">
-                <a id="connerheading" class="navbar-brand" href="#"><h1>Paul Aguilar</h1></a>
+                <a id="paulheading" class="navbar-brand" href="#"><h1>Paul Aguilar</h1></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                 </button>
@@ -22,13 +22,13 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="index.html">About Me <span class="sr-only">(current)</span></a>
+                            <a class="nav-link" style="color:white;" href="index.html">About Me <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="portfolio.html">Portfolio</a>
+                            <a class="nav-link" style="color:white;" href="portfolio.html">Portfolio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="contact.html">Contact Me</a>
+                            <a class="nav-link" style="color:white;" href="contact.html">Contact Me</a>
                         </li>
                     </ul>
                 </div>
@@ -43,6 +43,10 @@
                             <br><br>
                             Phone Number: (469)478-8424
                             <br><br>
+                            LinkedIn: <a href="linkedin.com/in/paul-aguilar-79b9a0116">Paul Aguilar</a>
+                            <br><br>
+                            GitHub: <a href="https://github.com/paultex11">paultex11</a>
+                            <br><br>
                             Dallas, Texas
                         </p>
                     </div>
@@ -51,7 +55,7 @@
             <div class="footercontainer">
                     <div class="row" id="footer">
                         <div class="col-lg-12">
-                            <p>Copyright | Paul Aguilar</p>
+                            <p>Copyright | Paul Aguilar 2018</p>
                         </div>
                     </div>
                   </div>
