--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>My Portfolio</title>
+    
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Candal|Days+One" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
@@ -13,8 +15,8 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-            <nav id="navigation" class="navbar navbar-expand-lg navbar-light">
-                <a id="connerheading" class="navbar-brand" href="#"><h1>Paul Aguilar</h1></a>
+            <nav id="navigation" class="navbar navbar-expand-lg navbar-light ">
+                <a id="paulheading" class="navbar-brand" href="#"><h1>Paul Aguilar</h1></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                 </button>
@@ -22,40 +24,40 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="index.html">About Me <span class="sr-only">(current)</span></a>
+                            <a class="nav-link" style="color:white;" href="index.html">About Me <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="portfolio.html">Portfolio</a>
+                            <a class="nav-link" style="color:white;" href="portfolio.html">Portfolio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="contact.html">Contact Me</a>
+                            <a class="nav-link" style="color:white;" href="contact.html">Contact Me</a>
                         </li>
                     </ul>
                 </div>
             </nav>
   <div id="aboutme">
     <div class="row">
-        <div class="col-lg-6 offset-lg-2" id=aboutmebg>
+        <div class="col-lg-8 offset-lg-2" id=aboutmebg>
             <h1 id="aboutmetitle">About Me</h1>
             <img src="assets/images/Profile-Pic.jpg" class="img-fluid" alt="Responsive image">
 
             <p>
-                I’ve always loved challenges and puzzles. Something about working through a problem in the most efficient manner always scratches some itch I’ve had since childhood. 
-                That’s one of the things that has led me to pursue a career as a full stack web developer. 
-                I’d been coding for about 2 years when I decided to pursue SMU’s Full Stack Web Development Certification.
+                I am a (Ret.) United States Navy Veteran who is just starting out in the fast paced world of Web Development, I will be receiving
+                my Full Stack web development certification from the SMU coding bootcamp in February 2019. I am reletively new to the world of 
+                Web Development but I look to expand my library of knowledge and skill in a short amount of time. I love challenges that are beyond 
+                my scope, the process of struggling through to the correct answer brings me a great sense of satisfaction.
 
                 <br><br>
 
-                Previously, I had worked my way through the standard business major graduation careers (banking and insurance). 
-                I met some great people along the way but I always felt like something was missing. 
-                I enjoyed every day, yet there was always that nagging feeling I was missing something. 
-                It was creativity and challenge! I wanted to feel proud of what I had made and work with a team who felt the same way.
+                I may be new to the world of Web Development but I am not new to the technology sector, after being Honorably discharged
+                from the Navy in 2013 I entered the IT sector and have been working Desktop/Deskside support ever since. I have worked for 
+                major corporations (<a href="https://www.ibm.com/cloud/">IBM Cloud</a>, <a href="http://www.hyosung.com/en/index.do">Nautilus Hyosung America Inc.</a>) in the past and enjoyed every minute of it.
 
                 <br><br>
 
-                Since then, I’ve pursued this career with a passion I didn’t know that I had in me. 
-                I’m still learning, but that’s true of all of us, isn’t it? I’m certain that I’ll continue to improve day after day and that I’ll enjoy every minute of it.
-                 I am a Web Developer. 
+                I have always had the desire to learn how to code but never had the time and resources to do so in the past, so when I was 
+                presented with the chance to formally learn I jumped at the opportunity. I hope to make a career change in the near future,
+                doing what I really enjoy. So come on in and have a look around. 
 
                 <br><br>
 
@@ -66,7 +68,7 @@
 <div class="footercontainer">
     <div class="row" id="footer">
         <div class="col-lg-12">
-            <p>Copyright | Paul Aguilar</p>
+            <p>Copyright | Paul Aguilar 2018</p>
         </div>
     </div>
   </div>
