--- a/portfolio.html
+++ b/portfolio.html
@@ -74,11 +74,11 @@
             </div>
         </div>
 
-        <!--
+        
         <div class="col-lg-8 offset-lg-2" id=portfoliobg2>
             <div class="card-group">
                 <div class="card">
-                    <img class="card-img-top" src="Assets/Images/trainschedule.PNG" alt="Card image cap">
+                    <img class="card-img-top" src="https://github.com/paultex11/Psychic-Game/blob/master/assets/images/download%20(1).jpg" alt="Card image cap">
                     <a href="https://crhodes92.github.io/Train-Schedule-App/">
                         <div class="card-body">
                             <h5 class="card-title">Train Scheduler</h5>
