--- a/portfolio.html
+++ b/portfolio.html
@@ -78,18 +78,18 @@
         <div class="col-lg-8 offset-lg-2" id=portfoliobg2>
             <div class="card-group">
                 <div class="card">
-                    <img class="card-img-top" src="https://github.com/paultex11/Psychic-Game/blob/master/assets/images/download%20(1).jpg" alt="Card image cap">
-                    <a href="https://crhodes92.github.io/Train-Schedule-App/">
+                    <img class="card-img-top" src="assets/images/tmg-article_default_mobile.jpg" alt="Card image cap">
+                    <a href="https://paultex11.github.io/Psychic-Game/">
                         <div class="card-body">
-                            <h5 class="card-title">Train Scheduler</h5>
+                            <h5 class="card-title">Psychic-Game</h5>
                         </div>
                     </a>
                 </div>
                 <div class="card">
                     <img class="card-img-top" src="Assets/Images/psychicguess.PNG" alt="Card image cap">
-                    <a href="https://crhodes92.github.io/psychic_guess/">
+                    <a href="https://paultex11.github.io/Friend-Finder/">
                         <div class="card-body">
-                            <h5 class="card-title">Psychic Guess</h5>
+                            <h5 class="card-title">Friend-Finder</h5>
                         </div>
                     </a>
                 </div>
