--- a/portfolio.html
+++ b/portfolio.html
@@ -86,7 +86,7 @@
                     </a>
                 </div>
                 <div class="card">
-                    <img class="card-img-top" src="Assets/Images/psychicguess.PNG" alt="Card image cap">
+                    <img class="card-img-top" src="assets/images/Best-friends-locator-apps.jpg" alt="Card image cap">
                     <a href="https://paultex11.github.io/Friend-Finder/">
                         <div class="card-body">
                             <h5 class="card-title">Friend-Finder</h5>
