--- a/portfolio.html
+++ b/portfolio.html
@@ -94,10 +94,12 @@
                     </a>
                 </div>
                 <div class="card">
-                    <img class="card-img-top" src="https://via.placeholder.com/1874x874" alt="Card image cap">
-                    <div class="card-body">
-                        <h5 class="card-title">Liri when it's done</h5>
+                    <img class="card-img-top" src="assets/images/amazon-prime-now-manhattan-06.jpg" alt="Card image cap">
+                    <a href="https://paultex11.github.io/Bamazon/">
+                        <div class="card-body">
+                            <h5 class="card-title">Bamazon</h5>
                     </div>
+                 </a>
                 </div>
             </div>
         </div>
